2006-04-21  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Ed Catmur  <ed at catmur dot co dot uk>

	* ext/lame/gstlame.c: (gst_lame_sink_event):
	  Don't crash if we get an EOS event before the encoder
	  has been set up (#339287).

2006-04-21  Wim Taymans  <wim@fluendo.com>

	* ext/dvdread/dvdreadsrc.c: (gst_dvd_read_src_start),
	(gst_dvd_read_src_goto_title), (gst_dvd_read_src_read),
	(gst_dvd_read_src_create), (gst_dvd_read_src_goto_sector):
	Move errors out of the normal code flow.
	Don't send eos, basesrc will do that for us when needed.

2006-04-21  Wim Taymans  <wim@fluendo.com>

	* gst/mpegstream/gstdvddemux.c: (gst_dvd_demux_change_state):
	* gst/mpegstream/gstmpegdemux.c: (gst_mpeg_demux_change_state):
	* gst/mpegstream/gstrfc2250enc.c: (gst_rfc2250_enc_change_state):
	Do state changes correctly

2006-04-13  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_alloc_sized_buf),
	(gst_mpeg2dec_alloc_buffer):
	  Can't use gst_pad_alloc_buffer*() when we are going to crop
	  the image before sending it out. Downstream basetransform-based
	  elements will complain about the wrong unit size otherwise
	  (when not operating in passthrough-mode at least).
	  Const-ify some static variables and do some minor clean-ups.
	  Use I420 macros for size/offsets (not really necessary in this
	  particular context, but this kind of code gets copy'n'pasted).

2006-04-13  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/mpegstream/gstmpegpacketize.c: (gst_mpeg_packetize_put),
	(read_cache):
	* gst/mpegstream/gstmpegpacketize.h:
	  g_malloc() can't fail, we don't need to handle this. Same for
	  gst_buffer_new_and_alloc().

	* gst/mpegstream/gstmpegparse.c: (gst_mpeg_parse_chain):
	  klass->send_buffer() should have the same semantics as
	  gst_pad_push(), ie. ownership of the buffer is transfered,
	  so we never have to unref the buffer no matter what the flow
	  return value was.
